fix add new model constraint
